# SkySentry

./: .gitignore  Caddyfile  README.md  REDIS.md  compose.yml
app/ultralytics/: .env  .gitignore  demo_realtime.py  fastsam_motion_track2.py  fastsam_motion_track2_use_mod.py  fetch_frame.ipynb  fetch_frame.py  live_test.py  main.py  pyproject.toml  server.py  test_huggingface_named_objects.py  test_ul_pfm.py  test_ultralytics.py  test_ultralytics_all.py  vikram_motion_detection.py  vis_from_csv.py  yoloe_rt.py  yoloe_rt_smoothed.py
app/ultralytics/.ipynb_checkpoints/: fetch_frame-checkpoint.ipynb
app/ultralytics/out_motion/: detections.csv
app/ultralytics/out_motion_strict/: detections.csv
app/ultralytics/out_yoloe_prompt_track_persist_v2/: detections.csv
backend/: Makefile  README.md  blackboxHandler.ts  go.mod  imageHandler.ts  index.ts  main.go  messageTypes.ts  package.json
backend/src/: index.ts
brain/: .env  README.md  package.json  response.md  tsconfig.json
brain/src/: example.ts  fetch.ts  index.ts  test.ts  types.ts
brain/src/db/: database.ts  detection-service.ts  schema.ts
capture/: .env  README.md  package.json  vite.config.ts
capture/src/: App.tsx  SkySentryClient.tsx  WebRTCComponent.tsx  vite-env.d.ts
frontend/: README.md
frontend/src/: App.tsx  SkySentryClient.tsx  WebRTCComponent.tsx
stream/: Dockerfile  api.ts  imageHandler.ts  index.ts  messageHandler.ts  package.json
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  temp.env.local  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
(+41 files in other folders)
